# claw-code-rust

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  progress.txt
.github/workflows/: ci.yml  github-notifications.yml
crates/agent-compact/: Cargo.toml
crates/agent-core/: Cargo.toml
crates/agent-core/src/: message.rs  query.rs  session.rs
crates/agent-mcp/: Cargo.toml
crates/agent-permissions/: Cargo.toml
crates/agent-provider/: Cargo.toml
crates/agent-tasks/: Cargo.toml
crates/agent-tools/: Cargo.toml
crates/agent-tools/src/: context.rs  lib.rs  orchestrator.rs  registry.rs  tool.rs
crates/claude-cli/: Cargo.toml
crates/server/: Cargo.toml
crates/server/src/: lib.rs  runtime.rs
crates/tools/: Cargo.toml
crates/tools-builtin/: Cargo.toml
crates/utils/: Cargo.toml
docs/: multi-agent-user-guide.md
docs/agent-rules/: cli-operations.md  git-workflow.md  heartbeat-protocol.md  heartbeat-templates.md  system-commands.md  valveos-protocol.md
docs/plans/: 2026-04-18-housekeeper-agent-design.md
notifications/: github-activity.jsonl  github-meta.json
scripts/: validate-workflow.py
tasks/: ARCHITECTURE.md  SYSTEM-MANIFEST.md  multi-agent-user-guide.md
tasks/coo/: audit-log.md  instructions.md
tasks/coordinator/: assignments.md  instructions.md  queue.md
tasks/housekeeper/: cleanup-queue.md  instructions.md
tasks/logs/: README.md  incident-report-pr-manager-2026-04-23.md  iteration-12-archive-2026-04-23.md
tasks/maintainer/: improvements.md  instructions.md
tasks/planner/: instructions.md  observations.md
tasks/pr-manager/: instructions.md
tasks/shared/: agent-status.md  decisions.md  heartbeat-panel.md  iteration-log.md  rehearsal-plan.md  session-report-template.md
tasks/workers/: branches.md  instructions.md  (+1 more)
(+65 files in other folders)
