[package]
name = "agent-tools"
description = "Tool trait, registry, and execution orchestration"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agent-permissions = { workspace = true }
agent-provider = { workspace = true }

tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
