[package]
name = "clawcr-server"
description = "Transport-neutral runtime protocol types and server contracts"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clawcr-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
smol_str = { workspace = true }
